--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ path = "src/bin.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 clap = { version = "4.4.10", features = [] }
+num-traits = "0.2.17"
